compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__extract_constant_from_return_of_list.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "public fn main() {\n  [1, 2, 3, 4]\n}"
snapshot_kind: text
---
----- BEFORE ACTION
public fn main() {
  [1, 2, 3, 4]
  ↑           
}


----- AFTER ACTION
const ints = [1, 2, 3, 4]

public fn main() {
  ints
}
