compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__extract_constant_from_return_of_string.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "public fn main() {\n  \"constant\"\n}"
snapshot_kind: text
---
----- BEFORE ACTION
public fn main() {
  "constant"
  ↑         
}


----- AFTER ACTION
const string = "constant"

public fn main() {
  string
}
