compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__extract_constant_from_return_of_tuple.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "public fn main() {\n  #(0.25, 0.75)\n}"
snapshot_kind: text
---
----- BEFORE ACTION
public fn main() {
  #(0.25, 0.75)
  ▔↑           
}


----- AFTER ACTION
const value = #(0.25, 0.75)

public fn main() {
  value
}
