compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__extract_variable_3.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "public fn main() {\n  list.map([1, 2, 3], todo, todo)\n}"
snapshot_kind: text
---
----- BEFORE ACTION
public fn main() {
  list.map([1, 2, 3], todo, todo)
                            ▔▔▔▔↑
}


----- AFTER ACTION
public fn main() {
  let value = todo
  list.map([1, 2, 3], todo, value)
}
