compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__extract_variable_from_capture_arguments_2.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "public fn main() {\n  int.add(11, _)\n}"
snapshot_kind: text
---
----- BEFORE ACTION
public fn main() {
  int.add(11, _)
          ↑     
}


----- AFTER ACTION
public fn main() {
  let int = 11
  int.add(int, _)
}
