compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__extract_variable_in_block.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "public fn main() {\n  {\n    todo\n    wibble([1, 2, 3])\n    todo\n  }\n}"
snapshot_kind: text
---
----- BEFORE ACTION
public fn main() {
  {
    todo
    wibble([1, 2, 3])
               ▔▔▔↑  
    todo
  }
}


----- AFTER ACTION
public fn main() {
  {
    todo
    let ints = [1, 2, 3]
    wibble(ints)
    todo
  }
}
